--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   jamovi-deps:
     image: jamovi/jamovi-deps:2.6
@@ -49,43 +49,46 @@ services:
       dockerfile: docker/jamovi-Dockerfile
     platform: linux/amd64
     ports:
-      - '41337:41337'
-      - '41338:41338'
-      - '41339:41339'
+      - "41337:41337"
+      - "41338:41338"
+      - "41339:41339"
     command: ["/usr/bin/python3 -m jamovi.server 41337 --if=*"]
     stdin_open: true
     environment:
+      # Cloud
+      JAMOVI_MODE: "cloud"
+      JAMOVI_UPLOAD_PATH: "/tmp"
 
-        # for development, use the vite dev server
-        # (uncomment/enable the vite service above too)
-        # JAMOVI_DEV_SERVER: "http://vite:5173"
+      # for development, use the vite dev server
+      # (uncomment/enable the vite service above too)
+      # JAMOVI_DEV_SERVER: "http://vite:5173"
 
-        # block Rj - don't enable unless you understand the risks!
-        JAMOVI_ALLOW_ARBITRARY_CODE: 'false'
+      # block Rj - don't enable unless you understand the risks!
+      JAMOVI_ALLOW_ARBITRARY_CODE: "false"
 
-        # for security, jamovi runs across 3 origins
-        #
-        # # separate by port
-        JAMOVI_HOST_A: '127.0.0.1:41337'
-        JAMOVI_HOST_B: '127.0.0.1:41338'
-        JAMOVI_HOST_C: '127.0.0.1:41339'
+      # for security, jamovi runs across 3 origins
+      #
+      # # separate by port
+      JAMOVI_HOST_A: "127.0.0.1:41337"
+      JAMOVI_HOST_B: "127.0.0.1:41338"
+      JAMOVI_HOST_C: "127.0.0.1:41339"
 
-        # separate by host (RECOMMENDED)
-        # JAMOVI_HOST_A: 'jamovi.127.0.0.1.nip.io:41337'
-        # JAMOVI_HOST_B: 'a.jamovi.127.0.0.1.nip.io:41337'
-        # JAMOVI_HOST_C: 'r.jamovi.127.0.0.1.nip.io:41337'
+      # separate by host (RECOMMENDED)
+      # JAMOVI_HOST_A: 'jamovi.127.0.0.1.nip.io:41337'
+      # JAMOVI_HOST_B: 'a.jamovi.127.0.0.1.nip.io:41337'
+      # JAMOVI_HOST_C: 'r.jamovi.127.0.0.1.nip.io:41337'
 
-        # separate by path (NOT RECOMMENDED! REDUCES SECURITY!)
-        # JAMOVI_HOST_A: 'jamovi.127.0.0.1.nip.io:41337'
-        # JAMOVI_HOST_B: 'jamovi.127.0.0.1.nip.io:41337/analyses'
-        # JAMOVI_HOST_C: 'jamovi.127.0.0.1.nip.io:41337/results'
+      # separate by path (NOT RECOMMENDED! REDUCES SECURITY!)
+      # JAMOVI_HOST_A: 'jamovi.127.0.0.1.nip.io:41337'
+      # JAMOVI_HOST_B: 'jamovi.127.0.0.1.nip.io:41337/analyses'
+      # JAMOVI_HOST_C: 'jamovi.127.0.0.1.nip.io:41337/results'
 
-        # prevent unauthorized access
-        # JAMOVI_ACCESS_KEY: 'yourpasswordhere'
-        # then access jamovi with ?access_key=yourpasswordhere added to the url
-        # i.e. 127.0.0.1:41337/?access_key=yourpasswordhere
-        # or alternatively, remove the password requirement:
-        # JAMOVI_ACCESS_KEY: ''
+      # prevent unauthorized access
+      # JAMOVI_ACCESS_KEY: 'yourpasswordhere'
+      # then access jamovi with ?access_key=yourpasswordhere added to the url
+      # i.e. 127.0.0.1:41337/?access_key=yourpasswordhere
+      # or alternatively, remove the password requirement:
+      # JAMOVI_ACCESS_KEY: ''
 
     volumes:
       - $HOME/Documents:/root/Documents
